# y2tmp3

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.opencode/: opencode.db-shm  opencode.db-wal
tests/: test_cli.py  test_security.py  test_utils.py
y2tmp3/: cli.py  config.py  downloader.py  formats.py  playlist.py  security.py  utils.py
