[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y2tmp3"
version = "1.0.0"
description = "A simple CLI tool to download YouTube videos as MP3 files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yt-dlp>=2025.05.22",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["y2tmp3*"]
exclude = ["songs*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests",
]

[project.scripts]
y2tmp3 = "y2tmp3.cli:main"

[tool.ruff]
line-length = 90
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101",  # Use of assert
    "S603",  # subprocess call - we use shell=False
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "yt_dlp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=y2tmp3 --cov-report=term-missing --cov-report=html"
